--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.3",
     "firebase": "^4.8.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
