--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
+  "doubleQuote": false,
   "printWidth": 80,
-  "arrowParens": "always"
+  "arrowParens": "avoid"
 }
